--- a/roles/init/templates/chrony.j2
+++ b/roles/init/templates/chrony.j2
@@ -1,6 +1,6 @@
 # Use public servers from the pool.ntp.org project.
 # Please consider joining the pool (http://www.pool.ntp.org/join.html).
-server {{ ntp_server|default('time.ien.it', true) }} iburst
+server {{ ntp_server }} iburst
 
 # Record the rate at which the system clock gains/losses time.
 driftfile /var/lib/chrony/drift
