--- a/roles/init/templates/rc.local.j2
+++ b/roles/init/templates/rc.local.j2
@@ -27,6 +27,6 @@ else
   git pull
 fi
 
-sudo -S -u root -i /bin/bash -l -c 'ansible-playbook -i /root/dev-env/hosts /root/dev-env/install.yaml'
+sudo -S -u root -i /bin/bash -l -c 'ansible-playbook -i /root/dev-env/hosts --skip-tags rclocal /root/dev-env/install.yaml'
 cp -a /root/.kube /home/{{ user }}/.kube && chown {{ user }}.{{ user }} -R /home/{{ user }}/.kube
 sudo -S -u {{ user }} -i /bin/bash -l -c 'oc login -u system:admin'
