--- a/roles/init/templates/rc.local.j2
+++ b/roles/init/templates/rc.local.j2
@@ -24,14 +24,7 @@ fi
 
 sudo -S -u root -i /bin/bash -l -c 'ansible-playbook -i /root/dev-env/hosts /root/dev-env/install.yaml'
 
-if [ ! -e /root/openshift.local.clusterup/ ]; then
-  > /root/.first
+if [ -e /root/openshift.local.clusterup/ ] && [ -e /root/.first ]; then
   cp -a /root/.kube /home/{{ user }}/.kube && chown {{ user }}.{{ user }} -R /home/{{ user }}/.kube
   sudo -S -u {{ user }} -i /bin/bash -l -c 'oc login -u system:admin'
-fi
-
-### fix for wrong redirect for webconsole
-if [ -e /root/.first ]; then
-  rm -fr /root/.first
-  reboot
 fi
